manifests/user/ttrss/db.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
  namespace: ttrss
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: app
          image: postgres:11.2
          ports:
            - containerPort: 5432
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 32Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: ttrss-db-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db-svc
  namespace: ttrss
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: db
