manifests/user/ttrss/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ttrss
  name: ttrss
  namespace: ttrss
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ttrss
  template:
    metadata:
      labels:
        app: ttrss
    spec:
      containers:
      - name: ttrss
        image: linuxserver/tt-rss:19.2-ls15
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 10m
            memory: 32Mi
        volumeMounts:
          - mountPath: /config
            name: ttrss-config
      volumes:
        - name: ttrss-config
          persistentVolumeClaim:
            claimName: ttrss-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ttrss
  name: ttrss-svc
  namespace: ttrss
spec:
  ports:
  - port: 80
  selector:
    app: ttrss
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: ttrss
  name: ttrss-ingress
  namespace: ttrss
spec:
  rules:
  - host: feeds.underyx.me
    http:
      paths:
      - backend:
          serviceName: ttrss-svc
          servicePort: 80
        path: /
  tls:
    - hosts:
      - feeds.underyx.me
      secretName: ttrss-tls
